topblock fix, added webfont to index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
  <title>Khalila Hughes</title>
-  
+ 
+<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'> 
   <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
   <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
@@ -50,7 +51,7 @@
 			<!-- <p class="blurb"> Hi, my name is Khalila.
 			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p> -->
 
-		<div id="skillshapes">
+	<	<div id="skillshapes">
 
 			<div class="circle-1">
 				<p> Something Cool</p>
