removed old code

--- a/work.html
+++ b/work.html
@@ -46,9 +46,7 @@
 
 </div> <!--end big-blurb-->
 
-		<div id="sidebar">
-			<!-- <p class="blurb"> Hi, my name is Khalila.
-			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p> -->
+	
   
   <div id="about-work">
   <p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  
@@ -61,9 +59,6 @@ Here is a sampling of the types of projects I've done:
 </p>
   </div> <!--end about-work-->
 
-	
-
-		</div> <!-- end sidebar -->
 	
 <div id="work-content">
 
@@ -82,7 +77,7 @@ Here is a sampling of the types of projects I've done:
 	
 </div> <!--end content-->
 
-</div> <!--end content-body-->
+</div> <!--end work-content-body-->
 
 
 <div id ="footer" >
