work style changes, added font

--- a/work.html
+++ b/work.html
@@ -4,8 +4,9 @@
 
   	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
- <title>Khalila Hughes</title>
   
+  <title>Khalila Hughes</title>
+ <link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
   <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
@@ -64,14 +65,14 @@ Here is a sampling of the types of projects I've done:
 
 	<div id="work-print">
     <h2>Print</h2>
-	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
+<!--	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/> -->
 
 	</div> <!--end work-print-->
 
 	<div id="work-digital">
       <h2>Digital</h2>
 
-	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
+<!--	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/> -->
 	
 </div> <!--end work-digital-->
 	
