type changes to work

--- a/work.html
+++ b/work.html
@@ -50,10 +50,14 @@
 	
   
   <div id="about-work">
+  <h3>Process</h3>  
+
+<h3>Projects</h3>
   <p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  
+
 Here is a sampling of the types of projects I've done: 
 <ul>
-<li>Holiday cards <span class="digital"> digital </span>)</li>
+<li>Holiday cards <span class="digital"> digital </span></li>
 <li>Invitations <span class="digital">digital</span> <span class="print">print</span></li>
 <li>PowerPoint presentation templates <span class="digital">digital</span></li>
 </ul>
