--- a/about.html
+++ b/about.html
@@ -5,26 +5,24 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
  
-	<title>Khalila Hughes</title>
-<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
-  <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
+	<title>Khalila Hughes: About Me</title>
+	<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'>
+  	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
+  	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+  	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
 
 </head>
 
 <body>
 <div id="page">
 
-<div id="topblock">
-<p> &nbsp;</p>
-</div> <!-- end topblock--> 
+	<div id="topblock"> 		<!-- bar at top of page -->
+		<p> &nbsp;</p>
+	</div> 		<!-- end topblock--> 
 
-<div id="header">
+	<div id="header">
 		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
-		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
-
-		</div>	<!--end header-->
+	</div>		<!--end header-->
 
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
@@ -34,49 +32,38 @@
 	</ul>	<!--end navigation-->
 	
 
-<div id="content-body"> 
+	<div id="content"> 
 
-<div id="big-blurb">
-<p> A Little About Me</p>
+		<div id="big-blurb">
+			<p> Creative Professional <span class="blurb-light-about">Extraordinaire</span></p>
+		</div> 		<!--end big-blurb-->
 
+	<div id="about">
+  		<!--<h3> A little about me </h3> -->	
+    	<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
+				Communication and Information Design at Illinois Institute of Technology. </p>
+		<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
+				this philosophy to everything I do. <span class="highlight-blue">Creative problem-solving is one of my strengths</span>, 
+				especially when the problem may be vocalized as simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
+		<p>With a goal-oriented approach to drafting design and content, I enjoy transforming ...
+				I work very well collaboratively and ... <span class="highlight-green">I believe that design is a function of communication</span>. 
+				Whatever the format, people absorb and react to information more positively when it is beautifully formatted, creatively displayed, 
+				and very well-written.  </p>
+		<p>In addition to native mastery of English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When 
+				I'm not creating beautiful content and design for other people, I am reading, writing, or going on city hikes with my handy camera 
+				phone taking photos. </p>
+		<p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as creative professional
+			extraordinaire (with a bit of flare).* </p>
 
-</div> <!--end big-blurb-->
+	</div>  		<!--end about-->		
 
+  	</div>  		<!--end content-->
 
-	<div id="content">
+	<div id ="footer" >
+		<p> Connect with me on... </p>
+	</div> 		<!--end footer-->
 
-	<div id="general">
-  <h3> A little about me </h3>			
-    <p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
-Communication and Information Design at Illinois Institute of Technology. </p>
-<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
-this philosophy to everything I do. <span class="highlight-blue">Creative problem-solving is one of my strengths</span>, especially when the problem 
-may be vocalized as simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
-
-<p> With a goal-oriented approach to drafting design and content, I enjoy transforming 
-I work very well collaboratively and  <span class="highlight-green">I believe that design is a function of communication</span>. Whatever the format, people absorb and 
-react to information more positively when it is beautifully formatted, creatively displayed, and very well-written.  </p>
-<p> In addition to native mastery of English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When I'm not creating beautiful
-content and design for other people, I am reading, writing, or going on city hikes with my handy camera phone taking photos. 
-</p>
-<p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as a
-all around professional.*
-</p>
-
-	</div>  		<!--end general-->
-				
-
-
-
-
-  </div>  	<!--end content-->
-  </div>		<!--end content-body-->
-
-<div id ="footer" >
-<p> Connect with me on... </p>
-	</div> <!--end footer-->
-
-</div> <!--end page-->
+</div> 			<!--end page-->
 
 </body>
 
