more cleaning up of code

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 	<div id="content"> 
 
 		<div id="big-blurb">
-			<p> Creative Professional <span class="blurb-light-about">Extraordinaire</span></p>
+			<p> Creative Professional <span class="highlight-purple">Extraordinaire</span></p>
 		</div> 		<!--end big-blurb-->
 
 	<div id="about">
