removed skillshapes html and styles, added about blurb on home

--- a/index.html
+++ b/index.html
@@ -47,39 +47,12 @@
 
 </div> <!--end big-blurb-->
 
-		<div id="mainbar">
-			<!-- <p class="blurb"> Hi, my name is Khalila.
-			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p> -->
+		<div id="home-about">
+			<p class="blurb"> Hi, my name is Khalila.
+			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p>
+	
 
-	<	<div id="skillshapes">
-
-			<div class="circle-1">
-				<p> Something Cool</p>
-			</div> <!--end circle-1-->
-
-			
-			<div class="square-1">
-				<p> Solution-focused</p>
-			</div> <!--end square-1-->
-
-
-<div class="square-2">
-				<p> Interesting</p>
-			</div> <!--end square-2-->
-			
-<div class="circle-2">
-				<p> Future-proof*</p>
-			</div> <!--end circle-2-->
-
-
-<div class="circle-3">
-				<p> One More</p>
-			</div> <!--end circle-3-->
-
-
-		</div> <!-- end skillshapes -->
-
-		</div> <!-- end mainbar -->
+		</div> <!-- home-about -->
 	
 <div id="content">
 
