not sure what to do with connect, added blurb

--- a/connect.html
+++ b/connect.html
@@ -14,17 +14,16 @@
 </head>
 
 <body>
+
 <div id="page">
 
-<div id="topblock">
-<p> &nbsp;</p>
-</div> <!-- end topblock--> 
+  <div id="topblock">
+    <p> &nbsp;</p>
+  </div> <!-- end topblock--> 
 
-<div id="header">
-		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
-		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
-
-		</div>	<!--end header-->
+  <div id="header">
+    <a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
+  </div>	<!--end header-->
 
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
@@ -34,14 +33,19 @@
 	</ul>	<!--end navigation-->
 	
 
-<div id="content-body"> 
+<div id="content"> 
 
+		<div id="big-blurb">
+			<p> Connect Connect <span class="highlight-purple">Connect</span></p>
+		</div> 		<!--end big-blurb-->
 
-</div>		<!--end content-body-->
-
-<div id ="footer" >
-<p> Connect with me on... </p>
-	</div> <!--end footer-->
+	    <div id="connect">
+          <p>Should I remove this page and have the linkedin and email info on the bottom of each page?</p>
+	    </div>  		<!--end connect-->		
+  
+  <div id ="footer" >
+    <p> Connect with me on... </p>
+  </div> <!--end footer-->
 
 </div> <!--end page-->
 
