--- a/about.html
+++ b/about.html
@@ -39,7 +39,6 @@
 		</div> 		<!--end big-blurb-->
 
 	<div id="about">
-  		<!--<h3> A little about me </h3> -->	
     	<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 				Communication and Information Design at Illinois Institute of Technology. </p>
 		<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
@@ -48,7 +47,7 @@
 		<p>With a goal-oriented approach to drafting design and content, I enjoy transforming ...
 				I work very well collaboratively and ... <span class="highlight-green">I believe that design is a function of communication</span>. 
 				Whatever the format, people absorb and react to information more positively when it is beautifully formatted, creatively displayed, 
-				and very well-written.  </p>
+				and very well-written. (*change order?) </p>
 		<p>In addition to native mastery of English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When 
 				I'm not creating beautiful content and design for other people, I am reading, writing, or going on city hikes with my handy camera 
 				phone taking photos. </p>
