--- a/work.html
+++ b/work.html
@@ -16,20 +16,15 @@
 
 <body>
 
-
-
-
 <div id="page">
 
-<div id="topblock">
-<p> &nbsp;</p>
-</div> <!-- end topblock--> 
+  <div id="topblock">
+    <p> &nbsp;</p>
+  </div>    <!-- end topblock--> 
 
-<div id="header">
-		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
-		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
-
-		</div>	<!--end header-->
+  <div id="header">
+    <a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
+  </div>	    <!--end header-->
 
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
@@ -38,54 +33,42 @@
 		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 	
+  <div id="content"> 
 
-<div id="content-body"> 
+    <div id="big-blurb">
+      <p> From Conception Through Execution</p>
+    </div>    <!--end big-blurb-->
 
-<div id="big-blurb">
-<p> From conception through execution...</p>
+    <div id="work">
+      <!-- <h3>Process</h3>  
+
+      <h3>Projects</h3> -->
+        <p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  </p>
+
+        <p>Here is a sampling of the types of projects I've done: </p>
+        
+        <ul>
+          <li>Holiday cards <span class="digital"> digital </span></li>
+          <li>Invitations <span class="print">print</span><span class="digital">digital</span></li>
+          <li>PowerPoint Templates <span class="digital">digital</span></li>
+          <li>Manuals <span class="print">print</span></li>
+          </ul>
+        <p>Check out some of my work.</p>
+
+        <div id="print-digital">
+
+          <h2 class="print"><a href="print.html">Print</a></h2>
+          <h2 class="digital"><a href="digital.html">Digital</a></h2>
+        </div>    <!--print-digital"-->
+
+    </div>    <!--end work-->
 
 
-</div> <!--end big-blurb-->
-
-	
-  
-  <div id="about-work">
-  <h3>Process</h3>  
-
-<h3>Projects</h3>
-  <p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  
-
-Here is a sampling of the types of projects I've done: 
-<ul>
-<li>Holiday cards <span class="digital"> digital </span></li>
-<li>Invitations <span class="digital">digital</span> <span class="print">print</span></li>
-<li>PowerPoint presentation templates <span class="digital">digital</span></li>
-</ul>
-</p>
-  </div> <!--end about-work-->
-
-	
-<div id="work-content">
-
-	<div id="work-print">
-    <h2>Print</h2>
-
-	</div> <!--end work-print-->
-
-	<div id="work-digital">
-      <h2>Digital</h2>
-
-	
-</div> <!--end work-digital-->
-	
 </div> <!--end content-->
 
-</div> <!--end work-content-body-->
-
-
-<div id ="footer" >
-<p> copyright Khalila Hughes 2013 </p>
-	</div> <!--end footer-->
+  <div id ="footer" >
+    <p> copyright Khalila Hughes 2013 </p>
+  </div> <!--end footer-->
 
 </div> <!--end page-->
 
