started to make changes to blurbs on front

--- a/index.html
+++ b/index.html
@@ -16,42 +16,33 @@
 
 <body>
 
-
-
-
 <div id="page">
 
-<div id="topblock">
-<p> &nbsp;</p>
-</div> <!-- end topblock--> 
+	<div id="topblock">
+		<p> &nbsp;</p>
+	</div> 		<!-- end topblock--> 
 
-<div id="header">
+	<div id="header">
 		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes" /> </a>
-		<!--<h1><a href="index.html">Khalila Hughes</a></h1>-->
-
-		</div>	<!--end header-->
+	</div>		<!--end header-->
 
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
 		<li class="about"><a href="about.html">About</a></li>
 		<li class="work"><a href="work.html">Work</a></li>
 		<li	class="connect"><a href="connect.html">Connect</a></li>
-	</ul>	<!--end navigation-->
+	</ul>		<!--end navigation-->
 
 	
-<div id="content-body"> 
+	<div id="content-body"> 
 
-<div id="big-blurb">
-<p> I craft beautiful content and design for all media.</p>
-
-
-</div> <!--end big-blurb-->
+		<div id="big-blurb-home">
+			<p> I craft beautiful content and design for all media.</p>
+		</div> <!--end big-blurb-->
 
 		<div id="home-about">
 			<p class="blurb"> Hi, my name is Khalila.
-			 I am a designer, writer, and editor. Me in words and pictures. <br /> Sufficiently tantalized? Read on/Learn more...</p>
-	
-
+			 I am a designer, writer, and editor. <br /> Sufficiently tantalized? Read on/Learn more...</p>
 		</div> <!-- home-about -->
 	
 <div id="content">
@@ -68,17 +59,6 @@
 	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
 	
   </div> <!--end short-digital-->
-
-<!--	<div class="shortworks">
-	<h3> Type 3</h3>
-	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
-	</div> 
-
-
-	<div id ="connect-short">
-	</div>	<!--end connect-short-->
-
--->
 	
 </div> <!--end content-->
 
