--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>		<!--end navigation-->
 
-	
-	<div id="content-body"> 
+	<div id="content">
+
 
 		<div id="big-blurb-home">
 			<p> I craft beautiful content and design for all media.</p>
@@ -45,24 +45,17 @@
 			 I am a designer, writer, and editor. <br /> Sufficiently tantalized? Read on/Learn more...</p>
 		</div> <!-- home-about -->
 	
-<div id="content">
 
-	<div id="short-print">
-    <h2>Print</h2>
-	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
+		<div id="short-print">
+    		<h2>Print</h2>
+		</div> <!--end short-print-->
 
-	</div> <!--end short-print-->
-
-	<div id="short-digital">
-      <h2>Digital</h2>
-
-	<img src="media/img/portfolio-snapshots/timeeffortreporting_001.jpg" alt="time effort reporting manual thumbnail"/>
-	
-  </div> <!--end short-digital-->
+		<div id="short-digital">
+      		<h2><a href="digital.html">Digital</a></h2>
+  		</div> <!--end short-digital-->
 	
 </div> <!--end content-->
 
-</div> <!--end content-body-->
   
 	<div id ="footer" >
 <p> Connect with me on... </p>
