--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <title>Khalila Hughes</title>
  
 <link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'> 
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Puritan:400,700|Noto+Sans:400,700|Lato:400,700,900|Cabin:400,500,600,700|Arimo:400,700|Karla:400,700|Open+Sans:400,700,800,600|Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
   <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
