put blurb behind text

--- a/about.html
+++ b/about.html
@@ -34,12 +34,16 @@
 	
 	</div>		<!--end header-->
 
-	<div id="content"> 
 
-		<div id="big-blurb">
+	<div id="wrapper">
+
+	<div id="big-blurb">
 			<p> Creative Professional <span class="highlight-purple">Extraordinaire</span></p>
 		</div> 		<!--end big-blurb-->
 
+	<div id="content"> 
+
+		
 	<div id="about">
     	<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 				Communication and Information Design at Illinois Institute of Technology. </p>
@@ -59,6 +63,7 @@
 	</div>  		<!--end about-->		
 
   	</div>  		<!--end content-->
+  	</div>  		<!--end wrapper-->
 
 	<div id ="footer" >
 		<p> Connect with me on... </p>
