changed font size, added heading

--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
 
 		
 	<div id="about">
+	<h3> Me in 213 words </h3>
     	<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 				Communication and Information Design at Illinois Institute of Technology. </p>
 		<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
