--- a/about.html
+++ b/about.html
@@ -67,7 +67,12 @@
   	</div>  		<!--end wrapper-->
 
 	<div id ="footer" >
-		<p> Connect with me on... </p>
+		<div id ="contact">
+<h3>Contact Me</h3>
+<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
+</div> <!--- end contact--->
 	</div> 		<!--end footer-->
 
 </div> 			<!--end page-->
