--- a/about.html
+++ b/about.html
@@ -72,6 +72,9 @@
 <a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
 <a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
 <p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
+<div id="commons">
+<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+</div>	<!--end commons-->
 </div> <!--- end contact--->
 	</div> 		<!--end footer-->
 
