--- a/work.html
+++ b/work.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
   
   <title>Khalila Hughes</title>
- <link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Cabin:400,500,600,700|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+
   <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
   <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
@@ -33,11 +34,14 @@
 	</ul>	<!--end navigation-->
 	  </div>	    <!--end header-->
 
+
+	<div id="wrapper">
+<div id="big-blurb">
+      <p> From Concept Through Execution</p>
+    </div>    <!--end big-blurb-->
   <div id="content"> 
 
-    <div id="big-blurb">
-      <p> From Conception Through Execution</p>
-    </div>    <!--end big-blurb-->
+    
 
     <div id="work">
       <!-- <h3>Process</h3>  
@@ -48,7 +52,7 @@
         <p>Here is a sampling of the types of projects I've done: </p>
         
         <ul>
-          <li>Holiday cards <span class="digital"> digital </span></li>
+          <li>Holiday Cards <span class="digital"> digital </span></li>
           <li>Invitations <span class="print">print</span><span class="digital">digital</span></li>
           <li>PowerPoint Templates <span class="digital">digital</span></li>
           <li>Manuals <span class="print">print</span></li>
@@ -65,10 +69,20 @@
 
 
 </div> <!--end content-->
+  	</div>  		<!--end wrapper-->
 
-  <div id ="footer" >
-    <p> copyright Khalila Hughes 2013 </p>
-  </div> <!--end footer-->
+
+ <div id ="footer" >
+		<div id ="contact">
+<h3>Contact Me</h3>
+<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
+<div id="commons">
+<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+</div>	<!--end commons-->
+</div> <!--- end contact--->
+	</div> 		<!--end footer-->
 
 </div> <!--end page-->
 
