--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h3>Contact Me</h3>
 <a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
 <a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
+<p><a href="mailto: khalilahughes@gmail.com">khalilahughes+web@gmail.com</a></p>
 </div> <!--- end contact--->
 	</div> <!--end footer-->
 
