added media queries to home

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 	</ul>		<!--end navigation-->
 
 	</div>		<!--end header-->
-	<div id="content">
-
-
-		<div id="big-blurb-home">
+	
+	<div id="wrapper">
+<div id="big-blurb-home">
 			<p> I craft beautiful content and design for all media.</p>
 		</div> <!--end big-blurb-->
+
+<div id="content">
 
 		<div id="home-about">
 			<p class="blurb"> Hi, my name is Khalila.
@@ -56,6 +57,7 @@
   		</div> <!--end short-digital-->
 	
 </div> <!--end content-->
+  </div>  		<!--end wrapper-->
 
   
 	<div id ="footer" >
