added images to print and digital pages, added resume page

--- a/about.html
+++ b/about.html
@@ -60,7 +60,9 @@
 				phone taking photos. </p>
 		<p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as creative professional
 			extraordinaire (with a bit of flare).* </p>
-
+<div id ="go-resume">
+<h3><a href="resume.html">R&eacute;sum&eacute;</a></h3>
+</div>
 	</div>  		<!--end about-->		
 
   	</div>  		<!--end content-->
