--- a/digital.html
+++ b/digital.html
@@ -38,10 +38,14 @@
 			<p> Creative Professional <span class="highlight-green">Extraordinaire</span></p>
 		</div> 		<!--end big-blurb-->
 
-	<div id="print-gallery">
-    
-
-	</div>  		<!--end print-gallery-->		
+	<div id="digital-gallery">
+   <p> <img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" />
+    <img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" />
+    <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" />
+    <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" />
+    <img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" />
+    </p>
+	</div>  		<!--end digital-gallery-->		
 
   	</div>  		<!--end content-->
 
