--- a/work.html
+++ b/work.html
@@ -56,6 +56,8 @@
           <li>Invitations <span class="print">print</span><span class="digital">digital</span></li>
           <li>PowerPoint Templates <span class="digital">digital</span></li>
           <li>Manuals <span class="print">print</span></li>
+          <li>Graphics <span class="print">print</span><span class="digital">digital</span></li>
+
           </ul>
         <p>Check out some of my work.</p>
 
