--- a/index.html
+++ b/index.html
@@ -43,17 +43,29 @@
 <div id="content">
 
 		<div id="home-about">
-			<p class="blurb"> Hi, my name is Khalila.
-			 I am a designer, writer, and editor. <br /> Sufficiently tantalized? Read on/Learn more...</p>
+			<p> Hi, my name is Khalila.
+			 I am a designer, editor, and writer based out of the biggest city in the Midwest. </p>
+			<p> View my <a href="work.html">work</a>, read more <a href="about.html"> about</a>me 
+			or check out my <a href="resume.html"> resume </a>, or send me a message through 
+			my <a href="contact.html">contact</a> page.</p>
 		</div> <!-- home-about -->
 	
 
 		<div id="short-print">
-    		<h2>Print</h2>
+    		<h2><a href="print.html">Print</a></h2>
+
+		   <ul> 
+	<li class="opi"> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"  class="wide-img"/> </li>
+   <li class=invite> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
+</ul>
 		</div> <!--end short-print-->
 
 		<div id="short-digital">
       		<h2><a href="digital.html">Digital</a></h2>
+	    <ul>
+		<li class="wide"><img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
+   <li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
+</ul>
   		</div> <!--end short-digital-->
 	
 </div> <!--end content-->
