--- a/print.html
+++ b/print.html
@@ -39,17 +39,18 @@
 
 
 	<div id="print-gallery">
-    <img src="media/img/portfolio-snapshots/2008wbinvite.png"   alt="Winter Brunch Invitation"/>
-    <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation"/>
-    <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/>
-    <img src="media/img/portfolio-snapshots/2010wbinvite.jpg"  alt="Winter Brunch Invitation"/>
-    <img src="media/img/portfolio-snapshots/globaliqposter-sa1.jpg"   alt="Global IQ Poster"/>
-    <img src="media/img/portfolio-snapshots/globaliqposter-e3.jpg"    alt="Global IQ Poster"/>
-    <img src="media/img/portfolio-snapshots/bannerwelcome.jpg"      alt="Welcome Banner"/>
-    <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"/>
-    <img src="media/img/portfolio-snapshots/opibrochure-exterior.jpg"   alt="OPI Brochure Exterior"/>
+    <ul> 
+    <li><img src="media/img/portfolio-snapshots/2008wbinvite.png"   alt="Winter Brunch Invitation"/></li>
+   <li> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation"/></li>
+   <li> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
+    <li><img src="media/img/portfolio-snapshots/2010wbinvite.jpg"  alt="Winter Brunch Invitation"/></li>
+    <li><img src="media/img/portfolio-snapshots/globaliqposter-sa1.jpg"   alt="Global IQ Poster"/></li>
+    <li><img src="media/img/portfolio-snapshots/globaliqposter-e3.jpg"    alt="Global IQ Poster"/></li>
+    <li><img src="media/img/portfolio-snapshots/bannerwelcome.jpg"      alt="Welcome Banner"/></li>
+   <li> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"/></li>
+   <li> <img src="media/img/portfolio-snapshots/opibrochure-exterior.jpg"   alt="OPI Brochure Exterior"/></li>
     
-
+</ul>
 	</div>  		<!--end print-gallery-->		
 
   	</div>  		<!--end content-->
