--- a/digital.html
+++ b/digital.html
@@ -31,7 +31,7 @@
 	</ul>	<!--end navigation-->
 		</div>		<!--end header-->
 
-
+<div id ="wrapper">
 	<div id="content"> 
 
 		<div id="big-blurb">
@@ -39,20 +39,28 @@
 		</div> 		<!--end big-blurb-->
 
 	<div id="digital-gallery">
-   <p> <img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" />
-    <img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" />
-    <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" />
-    <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" />
-    <img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" />
-    </p>
+   <ul>
+    <li><img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" /> </li>
+    <li><img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </li>
+   <li> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" /></li>
+   <li> <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" /> </li>
+    <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
+    </ul>
 	</div>  		<!--end digital-gallery-->		
 
   	</div>  		<!--end content-->
-
+</div>  <!-- end wrapper -->
 	<div id ="footer" >
-		<p> Connect with me on... </p>
+		<div id ="contact">
+<h3>Contact Me</h3>
+<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
+<div id="commons">
+<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+</div>	<!--end commons-->
+</div> <!--- end contact--->
 	</div> 		<!--end footer-->
-
 </div> 			<!--end page-->
 
 </body>
