print and image changes

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 	<div id="wrapper">
 
 	<div id="big-blurb">
-			<p> Creative Professional <span class="highlight-purple">Extraordinaire</span></p>
+			<h1> Creative Professional <span class="highlight-purple">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
 
 	<div id="content"> 
@@ -61,7 +61,7 @@
 		<p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as creative professional
 			extraordinaire (with a bit of flare).* </p>
 <div id ="go-resume">
-<h3><a href="resume.html">R&eacute;sum&eacute;</a></h3>
+<h2><a href="resume.html">R&eacute;sum&eacute;</a></h2>
 </div>
 	</div>  		<!--end about-->		
 
