--- a/connect.html
+++ b/connect.html
@@ -35,7 +35,7 @@
 	<div id="wrapper">
 
 <div id="big-blurb">
-			<p> Connect Connect <span class="highlight-purple">Connect</span></p>
+			<h1> Connect Connect <span class="highlight-purple">Connect</span></h1>
 		</div> 		<!--end big-blurb-->
 
 <div id="content"> 
