--- a/digital.html
+++ b/digital.html
@@ -35,7 +35,7 @@
 	<div id="content"> 
 
 		<div id="big-blurb">
-			<p> Creative Professional <span class="highlight-green">Extraordinaire</span></p>
+			<h1> Creative Professional <span class="highlight-green">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
 
 	<div id="digital-gallery">
