--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 	<div id="wrapper">
 <div id="big-blurb-home">
-			<p> I craft beautiful content and design for all media.</p>
+			<h1> I craft beautiful content and design for all media.</h1>
 		</div> <!--end big-blurb-->
 
 <div id="content">
