--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 	<div id="wrapper">
 
 	<div id="big-blurb">
-			<p> Creative Professional <span class="highlight-purple">Extraordinaire</span></p>
+			<h1> Creative Professional <span class="highlight-purple">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
 
 	<div id="content"> 
