--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
 
 	<div id="wrapper">
 <div id="big-blurb">
-      <p> From Concept Through Execution</p>
+      <h1> From Concept Through Execution</h1>
     </div>    <!--end big-blurb-->
   <div id="content"> 
 
