cleaned up screen.css

--- a/about.html
+++ b/about.html
@@ -41,10 +41,10 @@
 			<h1> Creative Professional <span class="highlight-purple">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
 
-	<div id="content"> 
+	<div id="content-body"> 
 
 		
-	<div id="about">
+	<div id="content">
 	<h3> Me in 213 words </h3>
     	<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 				Communication and Information Design at Illinois Institute of Technology. </p>
@@ -63,9 +63,9 @@
 <div id ="go-resume">
 <h2><a href="resume.html">R&eacute;sum&eacute;</a></h2>
 </div>
-	</div>  		<!--end about-->		
+	</div>  		<!--end content-->		
 
-  	</div>  		<!--end content-->
+  	</div>  		<!--end content-body-->
   	</div>  		<!--end wrapper-->
 
 	<div id ="footer" >
