--- a/connect.html
+++ b/connect.html
@@ -38,9 +38,9 @@
 			<h1> Connect Connect <span class="highlight-purple">Connect</span></h1>
 		</div> 		<!--end big-blurb-->
 
-<div id="content"> 
+<div id="content-body"> 
 
-	    <div id="connect">
+	    <div id="content">
     <h3> Send an Email </h3>
     <form action="#" method="post">
       <fieldset>
@@ -58,8 +58,8 @@
         </fieldset>
       </form>
     
-	    </div>  		<!--end connect-->	
-	</div>  		<!--end content-->		
+	    </div>  		<!--end content-->	
+	</div>  		<!--end content-body-->		
 	
   		  	</div>  		<!--end wrapper-->
 
