--- a/digital.html
+++ b/digital.html
@@ -32,11 +32,11 @@
 		</div>		<!--end header-->
 
 <div id ="wrapper">
-	<div id="content"> 
 
 		<div id="big-blurb">
 			<h1> Creative Professional <span class="highlight-green">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
+	<div id="content-body"> 
 
 	<div id="digital-gallery">
    <ul>
@@ -48,8 +48,9 @@
     </ul>
 	</div>  		<!--end digital-gallery-->		
 
-  	</div>  		<!--end content-->
+  	</div>  		<!--end content-body-->
 </div>  <!-- end wrapper -->
+
 	<div id ="footer" >
 		<div id ="contact">
 <h3>Contact Me</h3>
