--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<h1> I craft beautiful content and design for all media.</h1>
 		</div> <!--end big-blurb-->
 
-<div id="content">
+<div id="content-body">
 
 		<div id="home-about">
 			<p> Hi, my name is Khalila.
@@ -68,7 +68,7 @@
 </ul>
   		</div> <!--end short-digital-->
 	
-</div> <!--end content-->
+</div> <!--end content-body-->
   </div>  		<!--end wrapper-->
 
   
