--- a/print.html
+++ b/print.html
@@ -35,7 +35,7 @@
 	<div id="big-blurb">
 			<h1> Creative Professional <span class="highlight-blue">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
-	<div id="content"> 
+	<div id="content-body"> 
 
 
 	<div id="print-gallery">
@@ -53,7 +53,7 @@
 </ul>
 	</div>  		<!--end print-gallery-->		
 
-  	</div>  		<!--end content-->
+  	</div>  		<!--end content-body-->
   	</div>  		<!--end wrapper-->
 
 	<<div id ="footer" >
