--- a/resume.html
+++ b/resume.html
@@ -41,10 +41,10 @@
 			<h1> Creative Professional <span class="highlight-purple">Extraordinaire</span></h1>
 		</div> 		<!--end big-blurb-->
 
-	<div id="content"> 
+	<div id="content-body"> 
 
 		
-	<div id="resume">
+	<div id="content">
 	<h3 class="keyskills">Key Skills</h3>
 					
 						<ul>
@@ -112,9 +112,9 @@
 									items for internal and external giveaways; managed  inventory and distribution of branded giveaways.</li>
 							</ul>
 
-	</div>  		<!--end resume-->		
+	</div>  		<!--end content-->		
 
-  	</div>  		<!--end content-->
+  	</div>  		<!--end content-body-->
   	</div>  		<!--end wrapper-->
 
 	<div id ="footer" >
