--- a/work.html
+++ b/work.html
@@ -39,11 +39,11 @@
 <div id="big-blurb">
       <h1> From Concept Through Execution</h1>
     </div>    <!--end big-blurb-->
-  <div id="content"> 
+  <div id="content-body"> 
 
     
 
-    <div id="work">
+    <div id="content">
       <!-- <h3>Process</h3>  
 
       <h3>Projects</h3> -->
@@ -67,10 +67,10 @@
           <h2 class="digital"><a href="digital.html">Digital</a></h2>
         </div>    <!--print-digital"-->
 
-    </div>    <!--end work-->
+    </div>    <!--end content-->
 
 
-</div> <!--end content-->
+</div> <!--end content-body-->
   	</div>  		<!--end wrapper-->
 
 
