fixed index issues

--- a/digital.html
+++ b/digital.html
@@ -45,7 +45,9 @@
    <li> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" /></li>
    <li> <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" /> </li>
     <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
-    </ul>
+      <li><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
+  
+  </ul>
 	</div>  		<!--end digital-gallery-->		
 
   	</div>  		<!--end content-body-->
