--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		<div id="home-about">
 			<p> Hi, my name is Khalila.
 			 I am a designer, editor, and writer based out of the biggest city in the Midwest. </p>
-			<p> View my <a href="work.html">work</a>, read more <a href="about.html"> about</a>me 
-			or check out my <a href="resume.html"> resume </a>, or send me a message through 
+			<p> View my <a href="work.html">work</a>, read more <a href="about.html"> about</a> me
+		(<a href="resume.html">resume </a> included) or send me a message through 
 			my <a href="contact.html">contact</a> page.</p>
 		</div> <!-- home-about -->
 	
@@ -56,16 +56,22 @@
 
 		   <ul> 
 	<li class="opi"> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"  class="wide-img"/> </li>
-   <li class=invite> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
+   <li class="invite"> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
+   <li class="invite"> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
+
 </ul>
 		</div> <!--end short-print-->
 
 		<div id="short-digital">
       		<h2><a href="digital.html">Digital</a></h2>
 	    <ul>
+        	<li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
+
+	 <li class="wide"><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
+
 		<li class="wide"><img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
-   <li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
-</ul>
+
+	</ul>
   		</div> <!--end short-digital-->
 	
 </div> <!--end content-body-->
