--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
  
 	<title>Khalila Hughes: About Me</title>
-	<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Puritan:400,700|Noto+Sans:400,700|Lato:400,700,900|Cabin:400,500,600,700|Arimo:400,700|Karla:400,700|Open+Sans:400,700,800,600|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
   	<link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   	<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
@@ -23,7 +22,7 @@
 	</div> 		<!-- end topblock--> 
 
 	<div id="header">
-	<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes"/>  </a> 
+		<a href="index.html"> <img src="media/img/kh-logolong.png" alt="Khalila Hughes"/>  </a> 
 
 	<ul id="navigation">
 		<li class="home"><a href="index.html">Home</a></li>
@@ -32,7 +31,7 @@
 		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
 	
-	</div>		<!--end header-->
+	</div>	<!--end header-->
 
 
 	<div id="wrapper">
@@ -51,36 +50,36 @@
 		<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
 				this philosophy to everything I do. <span class="highlight-blue">Creative problem-solving is one of my strengths</span>, 
 				especially when the problem may be vocalized as simple as "This doesn't sound/look right" or "I'm not sure what's wrong." </p>
-		<p>With a goal-oriented approach to drafting design and content, I enjoy transforming ...
-				I work very well collaboratively and ... <span class="highlight-green">I believe that design is a function of communication</span>. 
-				Whatever the format, people absorb and react to information more positively when it is beautifully formatted, creatively displayed, 
-				and very well-written. (*change order?) </p>
+		<p><span class="highlight-green">I believe that design is a function of communication</span>. Whatever the format, people absorb
+				and react to information more positively when it is very well-written, beautifully formatted, creatively displayed. </p>
 		<p>In addition to native mastery of English, I am fluent in Spanish, proficient in French, and am learning Chinese and Japanese. When 
 				I'm not creating beautiful content and design for other people, I am reading, writing, or going on city hikes with my handy camera 
 				phone taking photos. </p>
 		<p>I've been told that I'm also observant, thorough, creative, adaptable, and a team player. But I prefer thinking of myself as creative professional
-			extraordinaire (with a bit of flare).* </p>
-<div id ="go-resume">
-<h2><a href="resume.html">R&eacute;sum&eacute;</a></h2>
-</div>
+			extraordinaire. </p>
+		<div id ="go-resume">
+			<h2><a href="resume.html">R&eacute;sum&eacute;</a></h2>
+		</div>
 	</div>  		<!--end content-->		
 
-  	</div>  		<!--end content-body-->
-  	</div>  		<!--end wrapper-->
+  </div>  		<!--end content-body-->
+</div>  		<!--end wrapper-->
 
-	<div id ="footer" >
-		<div id ="contact">
+<div id ="footer" >
+	<div id ="contact">
 <h3>Contact Me</h3>
-<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
-<div id="commons">
-<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
-</div>	<!--end commons-->
+	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+	<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+	<p><a href="mailto: khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
+		
+	<div id="commons">
+		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+	</div>	<!--end commons-->
 </div> <!--- end contact--->
-	</div> 		<!--end footer-->
 
-</div> 			<!--end page-->
+</div> 		<!--end footer-->
+
+</div> 		<!--end page-->
 
 </body>
 
