--- a/digital.html
+++ b/digital.html
@@ -34,19 +34,18 @@
 <div id ="wrapper">
 
 		<div id="big-blurb">
-			<h1> Creative Professional <span class="highlight-green">Extraordinaire</span></h1>
+			<h1> Creative <span class="highlight-green">Professional </span></h1>
 		</div> 		<!--end big-blurb-->
 	<div id="content-body"> 
 
 	<div id="digital-gallery">
    <ul>
-    <li><img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" /> </li>
-    <li><img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </li>
-   <li> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" /></li>
-   <li> <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" /> </li>
-    <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
+      <li><img src="media/img/portfolio-snapshots/2010holidaycard.jpg"  alt="Holiday Card" /> </li>
+      <li><img src="media/img/portfolio-snapshots/2009holidaypartyinvite.png"   alt="Holiday Party Invitation" /> </li>
+      <li> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" /></li>
+      <li> <img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" /> </li>
+      <li><img src="media/img/portfolio-snapshots/celebrating25yrs.jpg"   alt="Celebrating 25 years logo" /> </li>
       <li><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
-  
   </ul>
 	</div>  		<!--end digital-gallery-->		
 
@@ -54,17 +53,18 @@
 </div>  <!-- end wrapper -->
 
 	<div id ="footer" >
-		<div id ="contact">
-<h3>Contact Me</h3>
-<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
-<div id="commons">
-<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
-</div>	<!--end commons-->
+	<div id ="contact">
+      <h3>Contact Me</h3>
+	  <a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+	  <a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+	<p><a href="mailto: khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
+		
+	<div id="commons">
+		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+	</div>	<!--end commons-->
 </div> <!--- end contact--->
-	</div> 		<!--end footer-->
-</div> 			<!--end page-->
+
+</div> 		<!--end footer-->
 
 </body>
 
