--- a/print.html
+++ b/print.html
@@ -39,34 +39,35 @@
 
 
 	<div id="print-gallery">
-    <ul> 
-    <li><img src="media/img/portfolio-snapshots/2008wbinvite.png"   alt="Winter Brunch Invitation"/></li>
-   <li> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation"/></li>
-   <li> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
-    <li><img src="media/img/portfolio-snapshots/2010wbinvite.jpg"  alt="Winter Brunch Invitation"/></li>
-    <li><img src="media/img/portfolio-snapshots/globaliqposter-sa1.jpg"   alt="Global IQ Poster"/></li>
-    <li><img src="media/img/portfolio-snapshots/globaliqposter-e3.jpg"    alt="Global IQ Poster"/></li>
-    <li><img src="media/img/portfolio-snapshots/bannerwelcome.jpg"      alt="Welcome Banner"/></li>
-   <li> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"/></li>
-   <li> <img src="media/img/portfolio-snapshots/opibrochure-exterior.jpg"   alt="OPI Brochure Exterior"/></li>
-    
-</ul>
+      <ul> 
+          <li><img src="media/img/portfolio-snapshots/2008wbinvite.png"   alt="Winter Brunch Invitation"/></li>
+          <li> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation"/></li>
+          <li> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
+          <li><img src="media/img/portfolio-snapshots/2010wbinvite.jpg"  alt="Winter Brunch Invitation"/></li>
+          <li><img src="media/img/portfolio-snapshots/globaliqposter-sa1.jpg"   alt="Global IQ Poster"/></li>
+          <li><img src="media/img/portfolio-snapshots/globaliqposter-e3.jpg"    alt="Global IQ Poster"/></li>
+          <li><img src="media/img/portfolio-snapshots/bannerwelcome.jpg"      alt="Welcome Banner"/></li>
+          <li> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"/></li>
+          <li> <img src="media/img/portfolio-snapshots/opibrochure-exterior.jpg"   alt="OPI Brochure Exterior"/></li>   
+        </ul>
 	</div>  		<!--end print-gallery-->		
 
   	</div>  		<!--end content-body-->
   	</div>  		<!--end wrapper-->
 
-	<<div id ="footer" >
-		<div id ="contact">
-<h3>Contact Me</h3>
-<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
-<div id="commons">
-<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
-</div>	<!--end commons-->
+	<div id ="footer" >
+	<div id ="contact">
+      <h3>Contact Me</h3>
+	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+	<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+	<p><a href="mailto: khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
+		
+	<div id="commons">
+		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+	</div>	<!--end commons-->
 </div> <!--- end contact--->
-	</div> 		<!--end footer-->
+
+</div> 		<!--end footer-->
 
 
 </div> 			<!--end page-->
