--- a/work.html
+++ b/work.html
@@ -44,9 +44,7 @@
     
 
     <div id="content">
-      <!-- <h3>Process</h3>  
-
-      <h3>Projects</h3> -->
+     
         <p>I've worked on many types of projects, either design, content, or a combination of the two (or both).  </p>
 
         <p>Here is a sampling of the types of projects I've done: </p>
@@ -54,7 +52,7 @@
         <ul>
           <li>Holiday Cards <span class="digital"> digital </span></li>
           <li>Invitations <span class="print">print</span><span class="digital">digital</span></li>
-          <li>PowerPoint Templates <span class="digital">digital</span></li>
+          <li>Business <span class="print">print</span><span class="digital">digital</span></li>
           <li>Manuals <span class="print">print</span></li>
           <li>Graphics <span class="print">print</span><span class="digital">digital</span></li>
 
@@ -75,16 +73,18 @@
 
 
  <div id ="footer" >
-		<div id ="contact">
+	<div id ="contact">
 <h3>Contact Me</h3>
-<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-<p><a href="mailto: khalilahughes@gmail.com">khalilahughes+web@gmail.com</a></p>
-<div id="commons">
-<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
-</div>	<!--end commons-->
+	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+	<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+	<p><a href="mailto: khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
+		
+	<div id="commons">
+		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+	</div>	<!--end commons-->
 </div> <!--- end contact--->
-	</div> 		<!--end footer-->
+
+</div> 		<!--end footer-->
 
 </div> <!--end page-->
 
