--- a/connect.html
+++ b/connect.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
  
 	<title>Khalila Hughes</title>
-  
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
   <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
@@ -30,17 +30,17 @@
 		<li class="work"><a href="work.html">Work</a></li>
 		<li	class="connect"><a href="connect.html">Connect</a></li>
 	</ul>	<!--end navigation-->
-	  </div>	<!--end header-->
+  </div>	  <!--end header-->
 
-	<div id="wrapper">
+<div id="wrapper">
 
-<div id="big-blurb">
-			<h1> Connect Connect <span class="highlight-purple">Connect</span></h1>
-		</div> 		<!--end big-blurb-->
+  <div id="big-blurb">
+		<h1> Connect Connect <span class="highlight-purple">Connect</span></h1>
+	</div> 		<!--end big-blurb-->
 
-<div id="content-body"> 
-
-	    <div id="content">
+  <div id="content-body"> 
+      <div id="content">
+    
     <h3> Send an Email </h3>
     <form action="#" method="post">
       <fieldset>
@@ -58,22 +58,24 @@
         </fieldset>
       </form>
     
-	    </div>  		<!--end content-->	
-	</div>  		<!--end content-body-->		
+	  </div>  		<!--end content-->	
+  </div>  		<!--end content-body-->		
 	
-  		  	</div>  		<!--end wrapper-->
+  </div>  		<!--end wrapper-->
 
- <div id ="footer" >
-		<div id ="contact">
-<h3>Contact Me</h3>
-<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-<p><a href="mailto: khalilahughes@gmail.com">khalilahughes@gmail.com</a></p>
-<div id="commons">
-<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
-</div>	<!--end commons-->
+<div id ="footer" >
+	<div id ="contact">
+  <h3>Contact Me</h3>
+	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+	<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+	<p><a href="mailto: khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
+		
+	<div id="commons">
+		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+	</div>	<!--end commons-->
 </div> <!--- end contact--->
-	</div> 		<!--end footer-->
+
+</div> 		<!--end footer-->
 
 </div> <!--end page-->
 
