--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
  <title>Khalila Hughes</title>
  
-<link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500|Nunito:700|Signika|Varela' rel='stylesheet' type='text/css'> 
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Puritan:400,700|Noto+Sans:400,700|Lato:400,700,900|Cabin:400,500,600,700|Arimo:400,700|Karla:400,700|Open+Sans:400,700,800,600|Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Cabin:400,500,600,700|Karla:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" media="screen, print" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
   <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
@@ -36,11 +35,11 @@
 	</div>		<!--end header-->
 	
 	<div id="wrapper">
-<div id="big-blurb-home">
+		<div id="big-blurb-home">
 			<h1> I craft beautiful content and design for all media.</h1>
 		</div> <!--end big-blurb-->
 
-<div id="content-body">
+	<div id="content-body">
 
 		<div id="home-about">
 			<p> Hi, my name is Khalila.
@@ -53,25 +52,20 @@
 
 		<div id="short-print">
     		<h2><a href="print.html">Print</a></h2>
-
 		   <ul> 
-	<li class="opi"> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"  class="wide-img"/> </li>
-   <li class="invite"> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
-   <li class="invite"> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
-
-</ul>
+			<li class="opi"> <img src="media/img/portfolio-snapshots/opibrochure-interior.jpg" alt="OPI Brochure Interior"  class="wide-img"/> </li>
+   			<li class="invite"> <img src="media/img/portfolio-snapshots/2009wbinvite.jpeg"   alt="Winter Brunch Invitation" class="wide-img"/> </li>
+   			<li class="invite"> <img src="media/img/portfolio-snapshots/timeeffortreporting-001.jpg"    alt="Time Effort Reporting Manual"/></li>
+		</ul>
 		</div> <!--end short-print-->
 
 		<div id="short-digital">
       		<h2><a href="digital.html">Digital</a></h2>
-	    <ul>
-        	<li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
-
-	 <li class="wide"><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
-
-		<li class="wide"><img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
-
-	</ul>
+	    	<ul>
+        		<li class="tall"> <img src="media/img/portfolio-snapshots/2011holidaycard.jpg"  alt="Holiday Card" class="tall-img" /> </li>
+	 		<li class="wide"><img src="media/img/portfolio-snapshots/june242012ward44.jpg"   alt="June 24, 2012 ward 44 crime" /> </li>
+			<li class="wide"><img src="media/img/portfolio-snapshots/2012holidaycard.jpg"    alt="Holiday Card" class="wide-img"/> </li>
+		</ul>
   		</div> <!--end short-digital-->
 	
 </div> <!--end content-body-->
@@ -79,14 +73,18 @@
 
   
 	<div id ="footer" >
-
-<div id ="contact">
-<h3>Contact Me</h3>
-<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-<p><a href="mailto: khalilahughes@gmail.com">khalilahughes+web@gmail.com</a></p>
+	<div id ="contact">
+		<h3>Contact Me</h3>
+	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
+	<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+	<p><a href="mailto: khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
+		
+	<div id="commons">
+		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+	</div>	<!--end commons-->
 </div> <!--- end contact--->
-	</div> <!--end footer-->
+
+</div> 		<!--end footer-->
 
 </div> <!--end page-->
 
