--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
 		
 	<div id="content">
-	<h3> Me in 213 words </h3>
+	<h3> Me in 187 words </h3>
     	<p> I am a Los Angeles native, current Chicago resident (okay, the suburbs, but it still counts!) pursuing a Master's in Technical 
 				Communication and Information Design at Illinois Institute of Technology. </p>
 		<p>I strongly believe that all forms of information should be accessible and easy to digest, no matter what the format. I apply
@@ -69,11 +69,11 @@
 	<div id ="contact">
 <h3>Contact Me</h3>
 	<a href="www.linkedin.com/in/khalilahughes"><img src="media/img/linkedin.png" alt="Linked In" /></a> 
-	<a href="mailto: khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
-	<p><a href="mailto: khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
+	<a href="mailto:khalilahughes@gmail.com"> <img src="media/img/mail.png" alt="Email me" /> </a> 
+	<p><a href="mailto:khalilahughes+web@gmail.com">khalilahughes@gmail.com</a></p>
 		
 	<div id="commons">
-		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0/">Creative Commons</a></p>
+		<p>Licensed under </a href="http://creativecommons.org/licenses/by-nc/2.0">Creative Commons</a></p>
 	</div>	<!--end commons-->
 </div> <!--- end contact--->
 
