more small changes

--- a/digital.html
+++ b/digital.html
@@ -34,7 +34,7 @@
 <div id ="wrapper">
 
 		<div id="big-blurb">
-			<h1> Creative <span class="highlight-green">Professional </span></h1>
+			<h1> Digital <span class="highlight-green">Gallery </span></h1>
 		</div> 		<!--end big-blurb-->
 	<div id="content-body"> 
 
