--- a/print.html
+++ b/print.html
@@ -33,7 +33,7 @@
 
 	<div id="wrapper">
 	<div id="big-blurb">
-			<h1> Creative Professional <span class="highlight-blue">Extraordinaire</span></h1>
+			<h1> Print <span class="highlight-blue">Gallery</span></h1>
 		</div> 		<!--end big-blurb-->
 	<div id="content-body"> 
 
