--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
 
 	<div id="wrapper">
 <div id="big-blurb">
-      <h1> From Concept Through Execution</h1>
+      <h1> From <span class="highlight-blue">Concept </span>Through Execution</h1>
     </div>    <!--end big-blurb-->
   <div id="content-body"> 
 
