--- a/work.html
+++ b/work.html
@@ -61,8 +61,8 @@
 
         <div id="print-digital">
 
-          <h2 class="print"><a href="print.html">Print</a></h2>
-          <h2 class="digital"><a href="digital.html">Digital</a></h2>
+          <h2 class="print"><a href="print.html">Print Gallery</a></h2>
+          <h2 class="digital"><a href="digital.html">Digital Gallery</a></h2>
         </div>    <!--print-digital"-->
 
     </div>    <!--end content-->
